--- a/Caso5.ipynb
+++ b/Caso5.ipynb
@@ -110,7 +110,7 @@
     "    \n",
     "### Restricciones\n",
     ">1. Cada CAC debe ser atendido por un único depósito \n",
-    ">>`# Para desarrollo del estudiante`\n",
+    ">>$\\sum_{i \\in I}{x_{ij}} \\geq 1 , \\; \\forall j \\in J$\n",
     ">2. No se debe superar la capacidad de los depósitos y sólo se puede atender CACs desde un depósito si se decide operar el mismo.\n",
     ">>$\\sum_{j \\in J}d_{j}x_{ij} \\leq k_{i}y_{i}, \\; \\forall i \\in I$\n",
     "\n",
@@ -121,7 +121,7 @@
     "\n",
     "### Función Objetivo\n",
     ">* Minimizar los costos totales de operación y transporte\n",
-    ">>`# Para desarrollo del estudiante`\n",
+    ">> estudiante\n",
     ">* Maximizar satisfacción de los CACs\n",
     ">>$\\max z_2 = \\sum_{j \\in J} d_{j} \\sum_{\\{i \\in I | h_{ij} \\leq r\\}} x_{ij}$"
    ]
@@ -3091,7 +3091,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3105,7 +3105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
