--- a/Solucion_Casos/Solucion_Caso 6.ipynb
+++ b/Solucion_Casos/Solucion_Caso 6.ipynb
@@ -107,20 +107,20 @@
     "\n",
     "### Restricciones\n",
     "> 1. Capturar en $z$ la máxima demanda atendida por un depósito\n",
-    ">> *# Para desarrollo del estudiante*\n",
+    ">>$z \\geq \\sum_{j \\in J}d_{j}x_{ij} , \\; \\forall i \\in I$\n",
     "> 2. Todo CAC debe ser atendido por un depósito\n",
-    ">> *# Para desarrollo del estudiante*\n",
+    ">>$\\sum_{i \\in I}{x_{ij}} \\geq 1 , \\; \\forall j \\in J$\n",
     "> 3. La demanda atendida por un depósito no puede superar su capacidad\n",
-    ">> *# Para desarrollo del estudiante*\n",
+    ">>$\\sum_{j \\in J}d_{j}x_{ij} \\leq k_{i}y_{i}, \\; \\forall i \\in I$\n",
     "> 4. El costo total de la solución puede ser, a lo sumo, 10% más alto que el de la solución de mínimo costo\n",
-    ">> *# Para desarrollo del estudiante*\n",
+    ">>$\\sum_{i \\in I}\\sum_{j \\in J}c_{ij}x_{ij} \\leq mejorcosto * 1.10$\n",
     "> 5. Naturaleza de las variables\n",
     ">> $x_{ij} \\in \\{0,1\\}, \\;\\; \\forall i\\in I,j\\in J$ <br>\n",
     ">> $z \\geq 0$\n",
     "\n",
     "### Función objetivo\n",
     "> Minimizar la máxima demanda atendida por un depósito\n",
-    ">> *# Para desarrollo del estudiante*"
+    ">>$\\min z $"
    ]
   },
   {
@@ -471,53 +471,9 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "758c87f6d9a1b3f85bac66f0dc73b80b",
-     "grade": true,
-     "grade_id": "cell-8240430227822d38",
-     "locked": true,
-     "points": 5,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3b46bf1319669defa9d62c5bde2877a2",
-     "grade": true,
-     "grade_id": "cell-41e7dcba77078079",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "costo_transporte = {\n",
+    "    (i, j): q * distancia[(i, j)] * produccion[j] for i in I for j in J}"
    ]
   },
   {
@@ -542,15 +498,6 @@
     "Es una buena práctica imprimir algunos objetos que contienen los parámetros en la consola luego de crearlos. De esta forma puedes corregir errores y familiarizarte con las estrucutras de datos que se van a utilizar. Puedes hacer estas pruebas en la celda a continuación.\n",
     "\n",
     "* **Esta celda no es calificable**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Aquí puedes explorar los parámetros\n"
    ]
   },
   {
@@ -635,53 +582,8 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "9e1522e8d12b48d3c4f32dbb71d3170f",
-     "grade": true,
-     "grade_id": "cell-9466bada00deeca6",
-     "locked": true,
-     "points": 5,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "be40950df8bdfac05d32a6da5059f8d9",
-     "grade": true,
-     "grade_id": "cell-22a4b3d85f6c728a",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "problema = lp.LpProblem(sense=lp.LpMinimize)"
    ]
   },
   {
@@ -1679,7 +1581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1693,7 +1595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
