--- a/Solucion_Casos/Solucion_Caso 6.ipynb
+++ b/Solucion_Casos/Solucion_Caso 6.ipynb
@@ -473,7 +473,7 @@
    "source": [
     "# your code here\n",
     "costo_transporte = {\n",
-    "    (i, j): q * distancia[(i, j)] * produccion[j] for i in I for j in J}"
+    "    (i, j): q * distancia[(i, j)] * produccion[j] for i in Depositos for j in Centros}"
    ]
   },
   {
@@ -655,53 +655,10 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "bf3207948a1d5d1aa7540626bc9f2ce5",
-     "grade": true,
-     "grade_id": "cell-39156750dbb050f0",
-     "locked": true,
-     "points": 5,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "0e007932ee311ce20f08b13e5cba88dc",
-     "grade": true,
-     "grade_id": "cell-554425e3e71ef09e",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "x = lp.LpVariable.dicts(\"atender\", [(\n",
+    "    i, j) for i in Depositos for j in Centros], lowBound=0, cat=lp.LpBinary)\n",
+    "z = lp.LpVariable(name=\"demanda_max\", lowBound=0, cat=lp.LpContinuous)"
    ]
   },
   {
@@ -770,53 +727,8 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "b210ad3498cbb0fbd5e58b4563ae84dd",
-     "grade": true,
-     "grade_id": "cell-54a77134f52db12f",
-     "locked": true,
-     "points": 15,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "b55fbcefaf35f27ca9e7a94cfed93357",
-     "grade": true,
-     "grade_id": "cell-31216d1df3d66889",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "problema += z"
    ]
   },
   {
@@ -888,30 +800,9 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3f1bed5978888bba82ddfea1a33e51c6",
-     "grade": true,
-     "grade_id": "cell-5b17bf0473e87b81",
-     "locked": true,
-     "points": 20,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "for i in Depositos:\n",
+    "    problema += z >= lp.lpSum(produccion[j]*x[(i, j)] for j in Centros), 'R1_'+str(i)"
    ]
   },
   {
@@ -957,30 +848,9 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "a65620a7b7c2fd4827dfa87da0b6f920",
-     "grade": true,
-     "grade_id": "cell-5f7657123e172a5c",
-     "locked": true,
-     "points": 10,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "for j in Centros:\n",
+    "    problema += lp.lpSum(x[(i, j)] for i in Depositos) == 1, 'R2_'+str(j)"
    ]
   },
   {
@@ -1026,30 +896,10 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "4b782d2bcda3c483d9b5673073813ab3",
-     "grade": true,
-     "grade_id": "cell-d8c100ee66144532",
-     "locked": true,
-     "points": 10,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "for i in Depositos:\n",
+    "    problema += lp.lpSum(produccion[j] * x[(i, j)]\n",
+    "                         for j in Centros) <= capacidad[i], 'R3_'+str(i)"
    ]
   },
   {
@@ -1095,53 +945,9 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "c4152e20c789488191bff5b7303f6faf",
-     "grade": true,
-     "grade_id": "cell-bbd7c2859a2fb18f",
-     "locked": true,
-     "points": 15,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "04327b129ede6156537a6f50dedace88",
-     "grade": true,
-     "grade_id": "cell-852cae9567dbdf14",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "problema += lp.lpSum(costo_transporte[(i, j)] * x[(i, j)]\n",
+    "                     for i in Depositos for j in Centros) <= mejor_costo * 1.10, 'R4'"
    ]
   },
   {
@@ -1267,30 +1073,11 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "cd88f7cf18e87c36e92a185469eee7b5",
-     "grade": true,
-     "grade_id": "cell-5a28a35abafc89a8",
-     "locked": true,
-     "points": 5,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "estado = lp.LpStatus[problema.solve()]\n",
+    "obj = lp.value(problema.objective)\n",
+    "print(estado)\n",
+    "print(obj)"
    ]
   },
   {
@@ -1337,30 +1124,10 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3a2b83f954d1b3b63dc9e78e92d1d791",
-     "grade": true,
-     "grade_id": "cell-fcc7fe6344d088d3",
-     "locked": true,
-     "points": 10,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Esta celda esta reservada para uso del equipo docente"
+    "# your code here\n",
+    "costo_total = lp.value(lp.lpSum(\n",
+    "    costo_transporte[(i, j)] * x[(i, j)] for i in Depositos for j in Centros))\n",
+    "print(costo_total)"
    ]
   },
   {
